--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jestersunborn.github.io/contact",
+  "name": "contact",
   "version": "1.0.0",
   "description": "Contact page for my personal web site",
   "main": "index.js",
